force-app/main/default/objects/OfferTag__c/OfferTag__c.object-meta.xml
<CustomObject>
    <label>OfferTag</label>
    <nameField>
        <label>OfferTag Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>OfferTags</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>