force-app/main/default/objects/OfferTag__c/fields/English_Full_Description__c.field-meta.xml
<CustomField>
    <fullName>English_Full_Description__c</fullName>
    <label>English Full Description</label>
    <type>TextArea</type>
</CustomField>