force-app/main/default/objects/OfferTag__c/fields/English_Short_Description__c.field-meta.xml
<CustomField>
    <fullName>English_Short_Description__c</fullName>
    <label>English Short Description</label>
    <type>TextArea</type>
</CustomField>